--- a/package.json
+++ b/package.json
@@ -4,18 +4,51 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "nodemon main.js"
+    "start": "nodemon main.js",
+    "frontend": "npm start --prefix frontend",
+    "dev": "concurrently \"nodemon main.js\" \"npm run frontend\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
+    "client-sessions": "^0.8.0",
+    "concurrently": "^5.1.0",
+    "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.4.0",
+    "cores": "^0.8.5",
+    "cors": "^2.8.5",
     "ejs": "^3.0.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.0",
+    "flash": "^1.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.0",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "query-string": "^6.10.1",
+    "react": "^16.12.0",
+    "react-animated-css": "^1.2.1",
+    "react-emoji": "^0.5.0",
+    "react-notifications": "^1.4.3",
+    "react-notifications-component": "^2.3.0",
+    "react-router-dom": "^5.1.2",
+    "react-scroll-to-bottom": "^1.3.2",
+    "react-table": "^7.0.0-rc.15",
+    "redis": "^3.0.2",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "styled": "^1.0.0",
+    "styled-components": "^5.0.1",
+    "uuid-token-generator": "^1.0.0",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
